# research

./: .env.example  README.md  main.py  pyproject.toml  pytest.py
.cursor/: python-and-uv.mdc
dotenv/: __init__.py
research/: __init__.py
tests/: test_main.py  test_research.py
